<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#216583"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/form"
            android:textAlignment="center"
            android:textColor="#010059"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:src="@drawable/ic_logo_uad" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/nim"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_nim"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:hint="@string/input_nim"
                android:textColorHint="#fff"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/nama"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_nama"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/input_nama"
                android:textColorHint="#fff"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/kelas"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radioA"
                    android:textSize="10sp"
                    android:textColor="#fff" />

                <RadioButton
                    android:id="@+id/radioB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/radioB"
                    android:textSize="10sp"
                    android:textColor="#fff" />

                <RadioButton
                    android:id="@+id/radioC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/radioC"
                    android:textSize="10sp"
                    android:textColor="#fff" />

                <RadioButton
                    android:id="@+id/radioD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/radioD"
                    android:textSize="10sp"
                    android:textColor="#fff" />

                <RadioButton
                    android:id="@+id/radioE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/radioE"
                    android:textColor="#fff"
                    android:textSize="10sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/slot"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_slot"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:hint="@string/input_slot"
                android:textColorHint="#fff"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hobi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/hobi"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/hobi_futsal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi_futsal"
                    android:textColor="#fff"
                    android:textSize="10sp" />

                <CheckBox
                    android:id="@+id/hobi_badminton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi_badminton"
                    android:textColor="#fff"
                    android:textSize="10sp" />

                <CheckBox
                    android:id="@+id/hobi_basket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi_basket"
                    android:textColor="#fff"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/hobi_volley"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi_volley"
                    android:textColor="#fff"
                    android:textSize="10sp" />

                <CheckBox
                    android:id="@+id/hobi_esports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi_esports"
                    android:textColor="#fff"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:background="#f54291"
            android:text="@string/btn_submit"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>