<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcd307"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/tampil_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/tampil_data"
        android:textSize="25sp"
        android:textColor="#6681ee"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:src="@drawable/verifikasi_fix"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/isi_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#58508d"
        android:text="@string/nim_anda"/>

    <TextView
        android:id="@+id/isi_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#5d1451"
        android:text="@string/nama_anda"/>

    <TextView
        android:id="@+id/isi_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#8105d8"
        android:text="@string/slot_anda"/>

    <TextView
        android:id="@+id/isi_kelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#730068"
        android:text="@string/kelas_anda"/>

    <TextView
        android:id="@+id/isi_hobi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#202060"
        android:text="@string/hobi_anda"/>
</LinearLayout>
</LinearLayout>